some debug update

--- a/data/www/multidoor.htm
+++ b/data/www/multidoor.htm
@@ -210,7 +210,7 @@
     nodeCardDoorControl.appendChild(newDoorCard);
   });
 
-  console.log(thisDoorID);
+  console.log('thisDoorID'+thisDoorID);
   
   let lastWSDoorRequest = -1;
   let gateways = [];
